@@ -3,11 +3,17 @@ Changelog
 
 4.21-dev - (unreleased)
 -----------------------
+ * Bug fix: added migration script to fix some figuretype for some figures 
+   [tiberich #5082]
  * Bug fix: fixed floating issues with related portlets [ichimdav #5157]
  * Change: geotags migration script is now transaction aware
    [ghicaale refs #4778]
  * Bug fix: added body text in cft_listing_view
    [tiberich #5111]
+ * Upgrade step: add an External Method called fix_categories_maps with:
+   module name -  Products.EEAContentTypes.migration_fixes 
+   function name - fix_categories_maps
+   Execute it [tiberich #5082] 
 
 4.20 - (2012-04-27)
 -------------------
